force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sf_outcome_contribution_request__c.field-meta.xml
<CustomField>
    <fullName>sf_outcome_contribution_request__c</fullName>
    <inlineHelpText>What are the total request from LCF to contribute to outcomes payments?</inlineHelpText>
    <label>SF - Outcome Contribution Request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>