force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sf_outcome_payments_expected__c.field-meta.xml
<CustomField>
    <fullName>sf_outcome_payments_expected__c</fullName>
    <inlineHelpText>What are the total outcomes payments for your project, inclusive of the LCF contribution?</inlineHelpText>
    <label>SF - Outcome Payments Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>