force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_cashable_savings_expected__c.field-meta.xml
<CustomField>
    <fullName>so_cashable_savings_expected__c</fullName>
    <inlineHelpText>What are the cashable savings expected to local commissioners engaged in the project as outcomes payers?</inlineHelpText>
    <label>SO - Cashable Savings Expected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>