force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_central_government_interventions__c.field-meta.xml
<CustomField>
    <fullName>so_central_government_interventions__c</fullName>
    <description>LCF can only support the provision of statutory services delivered by local government, and not those that central government is responsible for delivering.</description>
    <inlineHelpText>Are you proposing to fund interventions that are run by central government agencies in local authority areas?</inlineHelpText>
    <label>SO - Central Government Interventions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>