force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_financials_changed__c.field-meta.xml
<CustomField>
    <fullName>so_financials_changed__c</fullName>
    <description>Have any of the following key financials underpinning your project changed since in-principle award: cashable savings, cashable benefits, total outcomes payments or your request from LCF for outcomes payments?</description>
    <inlineHelpText>Have key financials changed?</inlineHelpText>
    <label>SO - Financials Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>