force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_lcf_contribution_change_reasons__c.field-meta.xml
<CustomField>
    <fullName>so_lcf_contribution_change_reasons__c</fullName>
    <description>Please note you will have to make an extremely strong case to allow us to increase your funding request to LCF. Given strong demand for LCF funding, please be aware we will be very unlikely to agree any increase.</description>
    <inlineHelpText>Explain the reasons behind the LCF contribution change</inlineHelpText>
    <label>SO - LCF Contribution Change Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>