force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_number_of_outcomes__c.field-meta.xml
<CustomField>
    <fullName>so_number_of_outcomes__c</fullName>
    <description>Number of outcomes</description>
    <formula>application__r.Setup_Number_of_Outcomes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of outcomes</inlineHelpText>
    <label>SO - Number of Outcomes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>