force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_outcome_management__c.field-meta.xml
<CustomField>
    <fullName>so_outcome_management__c</fullName>
    <description>Explain how: (i) you will make sure outcomes payments are only made for outcomes achieved because of your project (and not for outcomes arising from other interventions); and (ii) you will manage any perverse incentives arising from changes made to your outcomes.</description>
    <inlineHelpText>Attribution of Outcomes and Perverse Incentives</inlineHelpText>
    <label>SO - Outcome Management</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>