force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_outcome_metric_files__c.field-meta.xml
<CustomField>
    <fullName>so_outcome_metric_files__c</fullName>
    <inlineHelpText>Outcome Progress Metrics: File Uploads</inlineHelpText>
    <label>SO - Outcome Metric Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>