force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_outcome_relationship_files__c.field-meta.xml
<CustomField>
    <fullName>so_outcome_relationship_files__c</fullName>
    <inlineHelpText>Outcome relationship summary: file uploads</inlineHelpText>
    <label>SO - Outcome Relationship Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>