force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_outcome_relationships__c.field-meta.xml
<CustomField>
    <fullName>so_outcome_relationships__c</fullName>
    <inlineHelpText>How the outcomes relate to each other?</inlineHelpText>
    <label>SO - Outcome Relationships</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>