force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_outcomes_changed__c.field-meta.xml
<CustomField>
    <fullName>so_outcomes_changed__c</fullName>
    <inlineHelpText>Have any of your outcomes changed or have you got new outcomes or fewer outcomes?</inlineHelpText>
    <label>SO - Outcomes Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>