force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_primary_outcome_count__c.field-meta.xml
<CustomField>
    <fullName>so_primary_outcome_count__c</fullName>
    <description>Primary outcome count (should be 1)</description>
    <formula>application__r.Setup_Primary_Outcome_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary outcome count (should be 1)</inlineHelpText>
    <label>SO - Primary Outcome Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>