force-app/main/default/objects/Form_LCF_Setup_1__c/fields/so_section_status__c.field-meta.xml
<CustomField>
    <fullName>so_section_status__c</fullName>
    <label>SO - Section Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Form_Section_Status</valueSetName>
    </valueSet>
</CustomField>