force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_capital_ratio_high__c.field-meta.xml
<CustomField>
    <fullName>tm_capital_ratio_high__c</fullName>
    <defaultValue>"1:XXX"</defaultValue>
    <description>Page Title:Money Multiple</description>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Capital Ratio High</label>
    <length>8</length>
    <type>Text</type>
</CustomField>