force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_capital_ratio_low__c.field-meta.xml
<CustomField>
    <fullName>tm_capital_ratio_low__c</fullName>
    <defaultValue>"1:XXX"</defaultValue>
    <inlineHelpText>Lower</inlineHelpText>
    <label>TM - Capital Ratio Low</label>
    <length>8</length>
    <type>Text</type>
</CustomField>