force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_commissioner_payments_2018__c.field-meta.xml
<CustomField>
    <fullName>tm_commissioner_payments_2018__c</fullName>
    <inlineHelpText>Outcome payments from commissioner(s) excluding LCF payments</inlineHelpText>
    <label>TM - Commissioner Payments 2018</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>