force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_commissioner_payments_high__c.field-meta.xml
<CustomField>
    <fullName>tm_commissioner_payments_high__c</fullName>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Commissioner Payments High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>