force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_commissioner_savings_2020__c.field-meta.xml
<CustomField>
    <fullName>tm_commissioner_savings_2020__c</fullName>
    <inlineHelpText>Commissioner cashable savings and benefits from costs avoided</inlineHelpText>
    <label>TM - Commissioner Savings 2020</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>