force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_commissioner_savings_high__c.field-meta.xml
<CustomField>
    <fullName>tm_commissioner_savings_high__c</fullName>
    <description>Page Title:Commissioner Savings</description>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Commissioner Savings High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>