force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_commissioner_savings_median__c.field-meta.xml
<CustomField>
    <fullName>tm_commissioner_savings_median__c</fullName>
    <inlineHelpText>Median</inlineHelpText>
    <label>TM - Commissioner Savings Median</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>