force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_cost_of_investment_high__c.field-meta.xml
<CustomField>
    <fullName>tm_cost_of_investment_high__c</fullName>
    <description>Page Title:Operating Costs - Investment Admin</description>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Cost of Investment (High)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>