force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_cost_of_investment_low__c.field-meta.xml
<CustomField>
    <fullName>tm_cost_of_investment_low__c</fullName>
    <inlineHelpText>Lower</inlineHelpText>
    <label>TM - Cost of Investment (Low)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>