force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_engagement_plans__c.field-meta.xml
<CustomField>
    <fullName>tm_engagement_plans__c</fullName>
    <description>Set out current VCSE, service user and local community engagement plans during
the SIB’s life. Is the local commissioner(s) signed up to these? How will you sustain
pro-active involvement in and access to the SIB?</description>
    <inlineHelpText>VCSE, service user and local community engagement plans</inlineHelpText>
    <label>TM - Engagement Plans</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>