force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_evaluation_and_learning_cost_percent__c.field-meta.xml
<CustomField>
    <fullName>tm_evaluation_and_learning_cost_percent__c</fullName>
    <description>Evaluation and learning cost as a proportion of total cost</description>
    <formula>tm_evaluation_and_learning_costs_high__c / tm_total_sib_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluation and learning cost as a proportion of total cost</inlineHelpText>
    <label>TM - Evaluation and Learning Cost %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>