force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_evaluation_and_learning_costs_high__c.field-meta.xml
<CustomField>
    <fullName>tm_evaluation_and_learning_costs_high__c</fullName>
    <description>Page Title:Evaluation and Learning Costs</description>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Evaluation and Learning Costs High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>