force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_evaluation_and_learning_costs_med__c.field-meta.xml
<CustomField>
    <fullName>tm_evaluation_and_learning_costs_med__c</fullName>
    <inlineHelpText>Median</inlineHelpText>
    <label>TM - Evaluation and Learning Costs Med</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>