force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_financials_commentary__c.field-meta.xml
<CustomField>
    <fullName>tm_financials_commentary__c</fullName>
    <description>In particular we are looking for you to explain: where one variable changes between scenarios, but others don’t or the rate of change varies; why your costs might be outside the LCF benchmark expectations for costs; and why any part of the above data is incomplete</description>
    <inlineHelpText>Please provide a brief commentary on the above financials</inlineHelpText>
    <label>TM - Financials Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>