force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_interest_payable_high__c.field-meta.xml
<CustomField>
    <fullName>tm_interest_payable_high__c</fullName>
    <description>Page Title:Interest Payable</description>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Interest Payable High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>