force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_interest_payable_median__c.field-meta.xml
<CustomField>
    <fullName>tm_interest_payable_median__c</fullName>
    <inlineHelpText>Median</inlineHelpText>
    <label>TM - Interest Payable Median</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>