force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_investment_return_high__c.field-meta.xml
<CustomField>
    <fullName>tm_investment_return_high__c</fullName>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Investment Return High</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>