force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_investment_return_low__c.field-meta.xml
<CustomField>
    <fullName>tm_investment_return_low__c</fullName>
    <inlineHelpText>Low</inlineHelpText>
    <label>TM - Investment Return Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>