force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_investment_return_median__c.field-meta.xml
<CustomField>
    <fullName>tm_investment_return_median__c</fullName>
    <inlineHelpText>Median</inlineHelpText>
    <label>TM - Investment Return Median</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>