force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_investment_return_rate_high__c.field-meta.xml
<CustomField>
    <fullName>tm_investment_return_rate_high__c</fullName>
    <description>Page Title:Investment Return Rate</description>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Investment Return Rate High</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>