force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_investment_return_rate_low__c.field-meta.xml
<CustomField>
    <fullName>tm_investment_return_rate_low__c</fullName>
    <inlineHelpText>Lower</inlineHelpText>
    <label>TM - Investment Return Rate Low</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>