force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_lcf_payments_high__c.field-meta.xml
<CustomField>
    <fullName>tm_lcf_payments_high__c</fullName>
    <description>Page Title:LCF Payments</description>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - LCF Payments High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>