force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_lcf_payments_low__c.field-meta.xml
<CustomField>
    <fullName>tm_lcf_payments_low__c</fullName>
    <inlineHelpText>Lower</inlineHelpText>
    <label>TM - LCF Payments Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>