force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_more_than_one_commissioner__c.field-meta.xml
<CustomField>
    <fullName>tm_more_than_one_commissioner__c</fullName>
    <inlineHelpText>Does your project have more than one commissioner?</inlineHelpText>
    <label>TM - More Than One Commissioner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>