force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_number_of_commisioners__c.field-meta.xml
<CustomField>
    <fullName>tm_number_of_commisioners__c</fullName>
    <description>Count of commissioners for this full award setup form</description>
    <inlineHelpText>Count of commissioners for this full award setup form</inlineHelpText>
    <label>TM - Number of Commissioners</label>
    <summaryForeignKey>Form_LCF_Setup_Commissioner_1__c.full_award_setup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>