force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_number_of_commissioners__c.field-meta.xml
<CustomField>
    <fullName>tm_number_of_commissioners__c</fullName>
    <formula>application__r.Setup_Number_of_Commissioners__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM - Number of Commissioners</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>