force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_number_of_outcome_payments__c.field-meta.xml
<CustomField>
    <fullName>tm_number_of_outcome_payments__c</fullName>
    <label>TM - Number of Outcome Payments</label>
    <summaryForeignKey>Form_LCF_Outcome_Payment_1__c.full_award_setup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>