force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_operating_costs_median__c.field-meta.xml
<CustomField>
    <fullName>tm_operating_costs_median__c</fullName>
    <inlineHelpText>Median</inlineHelpText>
    <label>TM - Operating Costs Median</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>