force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_operating_management_costs_high__c.field-meta.xml
<CustomField>
    <fullName>tm_operating_management_costs_high__c</fullName>
    <description>Page Title:Operating Costs - SIB Management</description>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Operating Management Costs High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>