force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_operating_with_investor_costs_low__c.field-meta.xml
<CustomField>
    <fullName>tm_operating_with_investor_costs_low__c</fullName>
    <inlineHelpText>Low</inlineHelpText>
    <label>TM - Operating with Investor Costs Low</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>