force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_operating_with_investor_costs_med__c.field-meta.xml
<CustomField>
    <fullName>tm_operating_with_investor_costs_med__c</fullName>
    <inlineHelpText>Median</inlineHelpText>
    <label>TM - Operating with Investor Costs Med</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>