force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_other_loan_interest__c.field-meta.xml
<CustomField>
    <fullName>tm_other_loan_interest__c</fullName>
    <inlineHelpText>Does your project have any other Interest payable for fixed or variable loans?</inlineHelpText>
    <label>TM - Other Loan Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>