force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_performance_payments__c.field-meta.xml
<CustomField>
    <fullName>tm_performance_payments__c</fullName>
    <inlineHelpText>Does your project have any other performance payments payable?</inlineHelpText>
    <label>TM - Performance Payments</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>