force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_procurement_processes__c.field-meta.xml
<CustomField>
    <fullName>tm_procurement_processes__c</fullName>
    <inlineHelpText>Interventions and associated procurement processes</inlineHelpText>
    <label>TM - Procurement Processes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>