force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_repayment_years_high__c.field-meta.xml
<CustomField>
    <fullName>tm_repayment_years_high__c</fullName>
    <description>Page Title:Repayment Years</description>
    <inlineHelpText>High</inlineHelpText>
    <label>TM - Repayment Years High</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>