force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_repayment_years_low__c.field-meta.xml
<CustomField>
    <fullName>tm_repayment_years_low__c</fullName>
    <inlineHelpText>Low</inlineHelpText>
    <label>TM - Repayment Years Low</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>