force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_repayment_years_median__c.field-meta.xml
<CustomField>
    <fullName>tm_repayment_years_median__c</fullName>
    <inlineHelpText>Median</inlineHelpText>
    <label>TM - Repayment Years Median</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>