force-app/main/default/objects/Form_LCF_Setup_1__c/fields/tm_sib_delivery_cost_percent__c.field-meta.xml
<CustomField>
    <fullName>tm_sib_delivery_cost_percent__c</fullName>
    <description>SIB delivery cost as a percentage of total cost</description>
    <formula>tm_operating_costs_high__c / tm_total_sib_cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SIB delivery cost as a percentage of total cost</inlineHelpText>
    <label>TM - SIB Delivery Cost %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>